--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "react-sneakers",
   "version": "0.1.0",
+  "homepage": "https://oxytoc.github.io/react-sneakers",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.5",
+    "gh-pages": "^5.0.0",
     "macro-css": "^1.0.5",
     "react": "^18.2.0",
     "react-content-loader": "^6.2.1",
@@ -21,7 +23,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "json-server --watch db.json -p 3001"
+    "server": "json-server --watch db.json -p 3001",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
