--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-sneakers",
   "version": "0.1.0",
-  "homepage": "https://oxytoc.github.io/react-sneakers",
+  "homepage": "https://oxytoc.github.io/react-sneakers/#",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
